New todos. Revised the model according to my written notes. Some macro changes.

--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -37,7 +37,7 @@ $(\vartyh = \vartym)$ \\
 {} \\
 
 \redsp \redcon{\expfabss{\varvarh}{\first{\vartyh}}{\exphm{\second{\vartyh}}{\second{\vartym}}{\expfapp{((\expfabss{\varvarm}{\first{\vartym}}{\varexpm})}{(\expmh{\first{\vartym}}{\first{\vartyh}}{\varvarh})})}}}
-$(\first{\vartyh} = \first{\vartym} \wedge \second{\vartyh} = \second{\vartym})$ \\
+$(\tyfun{\first{\vartyh}}{\second{\vartyh}} = \tyfun{\first{\vartym}}{\second{\vartym}})$ \\
 
 % hm (Ax.t) (\\x.e)
 
