--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -8,9 +8,9 @@
 
 \varvalum & $=$ & \varvalfm $|$ \expmh{\vartym}{\vartyh}{\varexph} \\
 
-\varvalfm & $=$ & \expfabss{\varvarm}{\vartym}{\varexpm} $|$ \exptabs{\tyvarm}{\varexpm} $|$ \expnum{\varnum} $|$ \expnils{\vartym} $|$ \expcons{\varvalum}{\varvalum} $|$ \expms{\tylump}{\varvalus} \\
+\varvalfm & $=$ & \expfabss{\varvarm}{\vartym}{\varexpm} $|$ \exptabs{\tyvarm}{\varexpm} $|$ \expnum{\varnum} $|$ \expnils{\vartym} $|$ \expcons{\varvalum}{\varvalum} $|$ \expmh{\tylump}{\vartyh}{\varvaluh} \\
 
-&& \expms{(\tyfor{\tyvarm}{\vartym})}{\varvalus} \\
+&& \expms{\tylump}{\varvalfs} \\
 
 \vartym & $=$ & \tylump $|$ \tynum $|$ \tyvarm $|$ \tylist{\vartym} $|$ \tylabel{\vartym}{\tyvarm} $|$ \tyfun{\vartym}{\vartym} $|$ \tyfor{\tyvarm}{\vartym} \\
 
