--- a/macros.tex
+++ b/macros.tex
@@ -128,7 +128,7 @@
 \newcommand{\tyfun}[2]{\ensuremath{#1 \symfun #2}\xspace}
 \newcommand{\tyfor}[2]{\ensuremath{\symfor #1 . #2}\xspace}
 \newcommand{\tysubst}[3]{\ensuremath{\subst{#1}{#2}{#3}}}
-\newcommand{\tyunlab}[3]{\ensuremath{\tysubst{#1}{\ith{#2}}{\tylabel{\ith{#2}}{#3}}}\xspace}
+\newcommand{\tyunlab}[3]{\ensuremath{\tysubst{#1}{\ith{#2}}{\tylabel{\ith{#2}}{\ith{#3}}}}\xspace}
 \newcommand{\tyunlabh}[1]{\ensuremath{\tyunlab{#1}{\vartyh}{\tyvarh}}\xspace}
 \newcommand{\tyunlabm}[1]{\ensuremath{\tyunlab{#1}{\vartym}{\tyvarm}}\xspace}
 \newcommand{\tytst}{\ensuremath{\formsym{\symtst}}\xspace}
