--- a/model/scheme/grammar.tex
+++ b/model/scheme/grammar.tex
@@ -8,7 +8,7 @@
 
 \varvalus & $=$ & \varvalfs $|$ \expsh{\vartyh}{\varexph} \\
 
-\varvalfs & $=$ & \expfabsd{\varvars}{\varexps} $|$ \expnum{\varnum} $|$ \expnild $|$ \expcons{\varvalus}{\varvalus} $|$ \expsm{(\tylabel{\vartym}{\tyvarm})}{\varvalum} \\
+\varvalfs & $=$ & \expfabsd{\varvars}{\varexps} $|$ \expnum{\varnum} $|$ \expnild $|$ \expcons{\varvalus}{\varvalus} $|$ \expsh{(\tylabel{\vartyh}{\tyvarh})}{\varexph} $|$ \expsm{(\tylabel{\vartym}{\tyvarm})}{\varvalum} \\
 
 \formvar{\symop} & $=$ & \formsym{\symadd} $|$ \formsym{\symsub} \\
 
