Changed list type syntax to be less confusing when conversion schemes are added. Added today's time.

--- a/macros.tex
+++ b/macros.tex
@@ -124,7 +124,7 @@
 \newcommand{\tynum}{\ensuremath{\formsym{\symnat}}\xspace}
 \newcommand{\tyvarh}{\ensuremath{\symtyvar\langh}\xspace}
 \newcommand{\tyvarm}{\ensuremath{\symtyvar\langm}\xspace}
-\newcommand{\tylist}[1]{\ensuremath{\lceil #1 \rceil}\xspace}
+\newcommand{\tylist}[1]{\ensuremath{\lbrace #1 \rbrace}\xspace}
 \newcommand{\tylabel}[2]{\ensuremath{#1 . #2}\xspace}
 \newcommand{\tyfun}[2]{\ensuremath{#1 \symfun #2}\xspace}
 \newcommand{\tyfor}[2]{\ensuremath{\symfor #1 . #2}\xspace}
