--- a/macros.tex
+++ b/macros.tex
@@ -4,6 +4,8 @@
 \newcommand{\symcons}{cons}
 \newcommand{\symconu}{U}
 \newcommand{\symconf}{E}
+\newcommand{\symcs}{k}
+\newcommand{\symcsvar}{u}
 \newcommand{\symenv}{\Gamma}
 \newcommand{\symexp}{e}
 \newcommand{\symext}{,}
@@ -23,9 +25,9 @@
 \newcommand{\symjudh}{\symjud\langh}
 \newcommand{\symjudm}{\symjud\langm}
 \newcommand{\symjuds}{\symjud\langs}
-\newcommand{\symlangh}{h}
-\newcommand{\symlangm}{m}
-\newcommand{\symlangs}{s}
+\newcommand{\symlangh}{H}
+\newcommand{\symlangm}{M}
+\newcommand{\symlangs}{S}
 \newcommand{\symlump}{L}
 \newcommand{\symmh}{mh}
 \newcommand{\symms}{ms}
@@ -45,7 +47,7 @@
 \newcommand{\symsub}{-}
 \newcommand{\symtl}{tl}
 \newcommand{\symtst}{TST}
-\newcommand{\symtype}{t}
+\newcommand{\symty}{t}
 \newcommand{\symtyvar}{u}
 \newcommand{\symvalf}{w}
 \newcommand{\symvalu}{v}
@@ -60,28 +62,30 @@
 
 % Variables
 
-\newcommand{\varexph}{\ensuremath{\symexp\langh}\xspace}
-\newcommand{\varexpm}{\ensuremath{\symexp\langm}\xspace}
-\newcommand{\varexps}{\ensuremath{\symexp\langs}\xspace}
-\newcommand{\varvarh}{\ensuremath{\symvar\langh}\xspace}
-\newcommand{\varvarm}{\ensuremath{\symvar\langm}\xspace}
-\newcommand{\varvars}{\ensuremath{\symvar\langs}\xspace}
-\newcommand{\varvaluh}{\ensuremath{\symvalu\langh}\xspace}
-\newcommand{\varvalum}{\ensuremath{\symvalu\langm}\xspace}
-\newcommand{\varvalus}{\ensuremath{\symvalu\langs}\xspace}
-\newcommand{\varvalfm}{\ensuremath{\symvalf\langm}\xspace}
-\newcommand{\varvalfs}{\ensuremath{\symvalf\langs}\xspace}
-\newcommand{\varnum}{\ensuremath{\symnum}\xspace}
-\newcommand{\vartyh}{\ensuremath{\symtype\langh}\xspace}
-\newcommand{\vartym}{\ensuremath{\symtype\langm}\xspace}
-\newcommand{\vartys}{\ensuremath{\symtype\langs}\xspace}
 \newcommand{\varconm}{\ensuremath{\mathscr{\symconf}\xspace}}
 \newcommand{\varconfh}{\ensuremath{\symconf\langh}\xspace}
 \newcommand{\varconfm}{\ensuremath{\symconf\langm}\xspace}
 \newcommand{\varconfs}{\ensuremath{\symconf\langs}\xspace}
 \newcommand{\varconum}{\ensuremath{\symconu\langm}\xspace}
 \newcommand{\varconus}{\ensuremath{\symconu\langs}\xspace}
+\newcommand{\varcsh}{\ensuremath{\symcs\langh}\xspace}
+\newcommand{\varcsm}{\ensuremath{\symcs\langm}\xspace}
+\newcommand{\varexph}{\ensuremath{\symexp\langh}\xspace}
+\newcommand{\varexpm}{\ensuremath{\symexp\langm}\xspace}
+\newcommand{\varexps}{\ensuremath{\symexp\langs}\xspace}
+\newcommand{\varnum}{\ensuremath{\symnum}\xspace}
 \newcommand{\varstr}{\ensuremath{\formvar{\symstr}}\xspace}
+\newcommand{\vartyh}{\ensuremath{\symty\langh}\xspace}
+\newcommand{\vartym}{\ensuremath{\symty\langm}\xspace}
+\newcommand{\vartys}{\ensuremath{\symty\langs}\xspace}
+\newcommand{\varvaluh}{\ensuremath{\symvalu\langh}\xspace}
+\newcommand{\varvalum}{\ensuremath{\symvalu\langm}\xspace}
+\newcommand{\varvalus}{\ensuremath{\symvalu\langs}\xspace}
+\newcommand{\varvalfm}{\ensuremath{\symvalf\langm}\xspace}
+\newcommand{\varvalfs}{\ensuremath{\symvalf\langs}\xspace}
+\newcommand{\varvarh}{\ensuremath{\symvar\langh}\xspace}
+\newcommand{\varvarm}{\ensuremath{\symvar\langm}\xspace}
+\newcommand{\varvars}{\ensuremath{\symvar\langs}\xspace}
 
 % Expressions
 
@@ -94,10 +98,10 @@
 \newcommand{\expfix}[1]{\ensuremath{\formsym{\symfix} \; #1}}
 \newcommand{\expfield}[1]{\ensuremath{\formvar{\symfield} \; #1}}
 \newcommand{\exphd}[1]{\ensuremath{\formsym{\symhd} \; #1}}
-\newcommand{\exphm}[3]{\ensuremath{\formsym{\symhm} \; #1 \; #2 \; #3}}
+\newcommand{\exphm}[2]{\ensuremath{\formsym{\symhm} \; #1 \; #2}}
 \newcommand{\exphs}[2]{\ensuremath{\formsym{\symhs} \; #1 \; #2}}
 \newcommand{\expif}[3]{\ensuremath{\formsym{\symif} \; #1 \; #2 \; #3}}
-\newcommand{\expmh}[3]{\ensuremath{\formsym{\symmh} \; #1 \; #2 \; #3}}
+\newcommand{\expmh}[2]{\ensuremath{\formsym{\symmh} \; #1 \; #2}}
 \newcommand{\expms}[2]{\ensuremath{\formsym{\symms} \; #1 \; #2}}
 \newcommand{\expnild}{\ensuremath{\formsym{\symnil}}\xspace}
 \newcommand{\expnils}[1]{\ensuremath{\formsym{\symnil} \; #1}}
@@ -124,15 +128,31 @@
 \newcommand{\tynum}{\ensuremath{\formsym{\symnat}}\xspace}
 \newcommand{\tyvarh}{\ensuremath{\symtyvar\langh}\xspace}
 \newcommand{\tyvarm}{\ensuremath{\symtyvar\langm}\xspace}
-\newcommand{\tylist}[1]{\ensuremath{\lbrace #1 \rbrace}\xspace}
+\newcommand{\tylist}[1]{\ensuremath{\synlist{#1}}\xspace}
+%
 \newcommand{\tylabel}[2]{\ensuremath{#1 . #2}\xspace}
+%
 \newcommand{\tyfun}[2]{\ensuremath{#1 \symfun #2}\xspace}
 \newcommand{\tyfor}[2]{\ensuremath{\symfor #1 . #2}\xspace}
 \newcommand{\tysubst}[3]{\ensuremath{\subst{#1}{#2}{#3}}}
+%
 \newcommand{\tyunlab}[3]{\ensuremath{\tysubst{#1}{\ith{#2}}{\tylabel{\ith{#2}}{\ith{#3}}}}\xspace}
 \newcommand{\tyunlabh}[1]{\ensuremath{\tyunlab{#1}{\vartyh}{\tyvarh}}\xspace}
 \newcommand{\tyunlabm}[1]{\ensuremath{\tyunlab{#1}{\vartym}{\tyvarm}}\xspace}
+%
 \newcommand{\tytst}{\ensuremath{\formsym{\symtst}}\xspace}
+
+% Conversion schemes
+
+\newcommand{\cslump}{\ensuremath{\formsym{\symlump}}\xspace}
+\newcommand{\csnum}{\ensuremath{\formsym{\symnat}}\xspace}
+\newcommand{\csvarh}{\ensuremath{\symcsvar\langh}\xspace}
+\newcommand{\csvarm}{\ensuremath{\symcsvar\langm}\xspace}
+\newcommand{\cslist}[1]{\ensuremath{\synlist{#1}}\xspace}
+\newcommand{\csbrand}[2]{\ensuremath{#1 . #2}\xspace}
+\newcommand{\csfun}[2]{\ensuremath{#1 \symfun #2}\xspace}
+\newcommand{\csfor}[2]{\ensuremath{\symfor #1 . #2}\xspace}
+\newcommand{\cssubst}[3]{\ensuremath{\subst{#1}{#2}{#3}}}
 
 % Typing rules
 
@@ -179,3 +199,4 @@
 
 \newcommand{\str}[1]{\ensuremath{\formstr{``#1"}}}
 \newcommand{\subst}[3]{\ensuremath{#1[#2/#3]}}
+\newcommand{\synlist}[1]{\ensuremath{\lbrace #1 \rbrace}}
