--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -5,11 +5,13 @@
 
 \varexph & $=$ & \varvarh $|$ \varvaluh $|$ \expfapp{\varexph}{\varexph} $|$ \exptapp{\varexph}{\vartyh} $|$ \expfix{\varexph} $|$ \expop{\varexph}{\varexph} $|$ \expif{\varexph}{\varexph}{\varexph} $|$ \expfield{\varexph} \\
 
-&& \exppnull{\varexph} $|$ \expwrongs{\vartyh}{\formvar{string}} $|$ \exphm{\vartyh}{\vartym}{\varexpm} $|$ \exphs{\vartyh}{\varexps} \\
+&& \exppnull{\varexph} $|$ \expwrongs{\vartyh}{\formvar{string}} $|$ \exphm{\varcsh}{\varexpm} $|$ \exphs{\varcsh}{\varexps} \\
 
-\varvaluh & $=$ & \expfabss{\varvarh}{\vartyh}{\varexph} $|$ \exptabs{\tyvarh}{\varexph} $|$ \expnum{\varnum} $|$ \expnils{\vartyh} $|$ \expcons{\varexph}{\varexph} $|$ \exphm{\tylump}{\vartym}{\varvalfm} $|$ \exphs{\tylump}{\varvalfs} \\
+\varvaluh & $=$ & \expfabss{\varvarh}{\vartyh}{\varexph} $|$ \exptabs{\tyvarh}{\varexph} $|$ \expnum{\varnum} $|$ \expnils{\vartyh} $|$ \expcons{\varexph}{\varexph} $|$ \exphs{\tylump}{\varvalfs} \\
 
-\vartyh & $=$ & \tylump $|$ \tynum $|$ \tyvarh $|$ \tylist{\vartyh} $|$ \tylabel{\vartyh}{\tyvarh} $|$ \tyfun{\vartyh}{\vartyh} $|$ \tyfor{\tyvarh}{\vartyh} \\
+\vartyh & $=$ & \tylump $|$ \tynum $|$ \tyvarh $|$ \tylist{\vartyh} $|$ \tyfun{\vartyh}{\vartyh} $|$ \tyfor{\tyvarh}{\vartyh} \\
+
+\varcsh & $=$ & \cslump $|$ \csnum $|$ \csvarh $|$ \cslist{\varcsh} $|$ \csfun{\varcsh}{\varcsh} $|$ \csfor{\csvarh}{\varcsh} $|$ \csbrand{\vartyh}{\csvarh} \\
 
 \formvar{\symop} & $=$ & \formsym{\symadd} $|$ \formsym{\symsub} \\
 
@@ -17,7 +19,7 @@
 
 \varconfh & $=$ & \symholeh $|$ \expfapp{\varconfh}{\varexph} $|$ \exptapp{\varconfh}{\vartyh} $|$ \expfix{\varconfh} $|$ \expop{\varconfh}{\varexph} $|$ \expop{\varvaluh}{\varconfh} $|$ \expif{\varconfh}{\varexph}{\varexph} \\
 
-&& \expfield{\varconfh} $|$ \exppnull{\varconfh} $|$ \exphm{\vartyh}{\vartym}{\varconfm} $|$ \exphs{\vartyh}{\varconfs}
+&& \expfield{\varconfh} $|$ \exppnull{\varconfh} $|$ \exphm{\varcsh}{\varconfm} $|$ \exphs{\varcsh}{\varconfs}
 
 \end{tabular}
 \caption{Haskell grammar and evaluation contexts}
