Added unbranding macros. Revised the H ty rules for cs.

--- a/macros.tex
+++ b/macros.tex
@@ -141,6 +141,7 @@
 \newcommand{\tyunlabm}[1]{\ensuremath{\tyunlab{#1}{\vartym}{\tyvarm}}\xspace}
 %
 \newcommand{\tytst}{\ensuremath{\formsym{\symtst}}\xspace}
+\newcommand{\tyunbrand}[1]{\ensuremath{\lfloor #1 \rfloor}\xspace}
 
 % Conversion schemes
 
