--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -94,6 +94,10 @@ If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces
 
 \clearpage
 
+\input{model/conversions.tex}
+
+\clearpage
+
 \input{model/haskell/grammar.tex}
 
 \input{model/haskell/typing-rules.tex}
