Fixed the unbrand include in chapter 2. Revised the H op sem for cs.

--- a/model/haskell/operational-semantics/haskell.tex
+++ b/model/haskell/operational-semantics/haskell.tex
@@ -12,7 +12,7 @@
 
 \redruleh
 {\exptapp{(\exptabs{\tyvarh}{\varexph})}{\vartyh}}
-{\expsubst{\varexph}{\vartyh}{\tyvarh}} \\
+{\tysubst{\varexph}{\csbrand{\vartyh}{\tyvarh}}{\tyvarh}} \\
 
 % Fix
 
