Added todo about lang letter subscript as part of var. Added type conversion macro. Revised HM op sem for cs.

--- a/macros.tex
+++ b/macros.tex
@@ -124,6 +124,7 @@
 
 % Types
 
+\newcommand{\tyconv}[1]{\ensuremath{\lceil #1 \rceil}\xspace}
 \newcommand{\tylump}{\ensuremath{\formsym{\symlump}}\xspace}
 \newcommand{\tynum}{\ensuremath{\formsym{\symnat}}\xspace}
 \newcommand{\tyvarh}{\ensuremath{\symtyvar\langh}\xspace}
