Removed a type equation from an HM op sem red rule. Revised the HS op sem for cs.

--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -18,8 +18,7 @@
 
 \redruleh
 {\exphm{\tylist{\varcsh}}{(\expnils{\vartym})}}
-{\expnils{\tyunbrand{\varcsh}}}
-$(\tyunbrand{\varcsh} = \vartym)$ \\
+{\expnils{\tyunbrand{\varcsh}}} \\
 
 % hm [t] (cons v v)
 
