--- a/macros.tex
+++ b/macros.tex
@@ -179,7 +179,7 @@
 \newcommand{\redruleh}[2]{\ensuremath{\redrule{\redconh{#1}}{\redcon{#2}}}}
 \newcommand{\redrulem}[2]{\ensuremath{\redrule{\redconm{#1}}{\redcon{#2}}}}
 \newcommand{\redrules}[2]{\ensuremath{\redrule{\redcons{#1}}{\redcon{#2}}}}
-\newcommand{\redsp}{\ensuremath{\quad \quad}}
+\newcommand{\redsp}{\ensuremath{\hfill}}
 
 % Formats
 
