--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -10,7 +10,7 @@
 
 \vartyh & $=$ & \tylump $|$ \tynum $|$ \tyvarh $|$ \tylist{\vartyh} $|$ \tyfun{\vartyh}{\vartyh} $|$ \tyfor{\tyvarh}{\vartyh} \\
 
-\varcsh & $=$ & \cslump $|$ \csnum $|$ \csvarh $|$ \cslist{\varcsh} $|$ \csfun{\varcsh}{\varcsh} $|$ \csfor{\csvarh}{\varcsh} $|$ \csbrand{\vartyh}{\csvarh} \\
+\varcsh & $=$ & \cslump $|$ \csnum $|$ \csvarh $|$ \cslist{\varcsh} $|$ \csfun{\varcsh}{\varcsh} $|$ \csfor{\csvarh}{\varcsh} $|$ \csbrand{\varbrand}{\vartyh} \\
 
 \formvar{\symop} & $=$ & \formsym{\symadd} $|$ \formsym{\symsub} \\
 
