--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -38,15 +38,15 @@ $(\varvalfs \neq \expnum{\varnum})$ \\
 % hs (t.x) (sh (t.x) e)
 
 \redruleh
-{\exphs{(\tylabel{\vartyh}{\tyvarh})}{(\expsh{(\tylabel{\vartyh}{\tyvarh})}{\varexph})}}
+{\exphs{(\csbrand{\varbrand}{\vartyh})}{(\expsh{(\csbrand{\varbrand}{\vartyh})}{\varexph})}}
 {\varexph} \\
 
 % hs (t.x) v
 
 \redruleh
-{\exphs{(\tylabel{\vartyh}{\tyvarh})}{\varvalfs}}
+{\exphs{(\csbrand{\varbrand}{\vartyh})}{\varvalfs}}
 {\expwrongs{\vartyh}{\str{Parametricity \; violated}}}
-$(\varvalfs \neq \expsh{(\tylabel{\vartyh}{\tyvarh})}{\varexph})$ \\
+$(\varvalfs \neq \expsh{(\csbrand{\varbrand}{\vartyh})}{\varexph})$ \\
 
 % hs (t->t) (\x.e)
 
