--- a/model/unbrand.tex
+++ b/model/unbrand.tex
@@ -12,8 +12,8 @@
 \tyunbrand{\csfun{\varcsm}{\varcsm}} & $=$ & \csfun{\tyunbrand{\varcsm}}{\tyunbrand{\varcsm}} \\
 \tyunbrand{\csfor{\csvarh}{\varcsh}} & $=$ & \csfor{\csvarh}{\tyunbrand{\varcsh}} \\
 \tyunbrand{\csfor{\csvarm}{\varcsm}} & $=$ & \csfor{\csvarm}{\tyunbrand{\varcsm}} \\
-\tyunbrand{\csbrand{\vartyh}{\csvarh}} & $=$ & \vartyh \\
-\tyunbrand{\csbrand{\vartym}{\csvarm}} & $=$ & \vartym \\
+\tyunbrand{\csbrand{\varbrand}{\vartyh}} & $=$ & \vartyh \\
+\tyunbrand{\csbrand{\varbrand}{\vartym}} & $=$ & \vartym \\
 
 \end{tabular}
 \caption{Unbrand function}
