Added new HM typing rules for lump types. Rearranged the order of figures.

--- a/macros.tex
+++ b/macros.tex
@@ -99,10 +99,10 @@
 \newcommand{\expfix}[1]{\ensuremath{\formsym{\symfix} \; #1}}
 \newcommand{\expfield}[1]{\ensuremath{\formvar{\symfield} \; #1}}
 \newcommand{\exphd}[1]{\ensuremath{\formsym{\symhd} \; #1}}
-\newcommand{\exphm}[2]{\ensuremath{\formsym{\symhm} \; #1 \; #2}}
+\newcommand{\exphm}[3]{\ensuremath{\formsym{\symhm} \; #1 \; #2 \; #3}}
 \newcommand{\exphs}[2]{\ensuremath{\formsym{\symhs} \; #1 \; #2}}
 \newcommand{\expif}[3]{\ensuremath{\formsym{\symif} \; #1 \; #2 \; #3}}
-\newcommand{\expmh}[2]{\ensuremath{\formsym{\symmh} \; #1 \; #2}}
+\newcommand{\expmh}[3]{\ensuremath{\formsym{\symmh} \; #1 \; #2 \; #3}}
 \newcommand{\expms}[2]{\ensuremath{\formsym{\symms} \; #1 \; #2}}
 \newcommand{\expnild}{\ensuremath{\formsym{\symnil}}\xspace}
 \newcommand{\expnils}[1]{\ensuremath{\formsym{\symnil} \; #1}}
